# rust-microservices-monorepo

./: .env.example  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  Makefile.toml  README.org  https.org
.github/workflows/: all-tests.yaml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/domain/: Cargo.toml
crates/infra/: Cargo.toml
crates/infra/src/: lib.rs
crates/jd_api/: Cargo.toml
crates/jd_api/src/: lib.rs
crates/jd_api/src/course/: mod.rs  routes.rs  services.rs
crates/jd_api/src/user/: mod.rs  routes.rs  services.rs
crates/jd_app/: Cargo.toml
crates/jd_app/src/: main.rs  trace.rs
crates/jd_core/: Cargo.toml
crates/jd_core/src/: config.rs  error.rs  lib.rs
crates/jd_domain/: Cargo.toml
crates/jd_domain/src/user/: mod.rs  request.rs  response.rs
crates/jd_infra/: Cargo.toml
crates/jd_infra/migrations/: 00001_initialized.sql
crates/jd_infra/src/: lib.rs
crates/jd_infra/src/base/: macros_utils.rs  mod.rs
crates/jd_infra/src/middleware/: map_response.rs  mod.rs  mw_auth.rs
crates/jd_infra/src/user/: mod.rs
crates/jd_utils/: Cargo.toml
migrations/: 0000_initial.sql
src/: configs.rs  db.rs  errors.rs  lib.rs  main.rs
