[package]
name = "rust-microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
config = "0.14.0"
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
