[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tracing = "0.1.40"


core = {path = "../core"}
infra = {path = "../infra"}
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
tracing-subscriber = "0.3.18"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
